fix benckmark correctness (warmup, LF, TPS, boxing), update versions